--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tripaway">
-        <activity
-            android:name=".HomeScreenActivity"
-            android:exported="true"
-            android:label="@string/title_activity_home_screen"
-            android:theme="@style/Theme.Tripaway.NoActionBar" />
+
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".HomeActivity" />
+        <activity android:name=".HomeScreenActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
