--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tripaway">
+    package="com.example.tripaway" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tripaway">
+        android:theme="@style/Theme.Tripaway" >
 
 
         <meta-data
@@ -19,10 +19,14 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".HomeActivity" />
-        <activity android:name=".HomeScreenActivity" />
+        <activity
+            android:name=".HomeScreenActivity"
+            android:exported="true"
+            android:label="@string/title_activity_home_screen2"
+            android:theme="@style/Theme.Tripaway.NoActionBar" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
