fireStore with RecyclerView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tripaway">
+        <activity android:name=".UpcomingTripsActivity"></activity>
         <activity
             android:name=".Splash"
             android:exported="true" />
