--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tripaway">
-        <activity android:name=".EditTripActivity"></activity>
-        <activity android:name=".NotesActivity"></activity>
+        <activity
+            android:name=".AlertDialogue"
+            android:exported="true"
+            android:theme="@style/AlertDialogMy"/>
+
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".EditTripActivity" />
+        <activity android:name=".NotesActivity" />
         <activity android:name=".UpcomingTripsActivity" />
         <activity
             android:name=".Splash"
