--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tripaway">
+        <activity android:name=".ForgotPassActivity"></activity>
         <activity
             android:name=".AlertDialogue"
             android:exported="true"
-            android:theme="@style/AlertDialogMy"/>
+            android:theme="@style/AlertDialogMy" />
 
         <receiver
             android:name=".AlarmReceiver"
@@ -25,6 +26,7 @@
 
         <activity android:name=".EditTripActivity" />
         <activity android:name=".NotesActivity" />
+        <activity android:name=".TwitterActivity" />
         <activity android:name=".UpcomingTripsActivity" />
         <activity
             android:name=".Splash"
