floating Widget with notes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
+
+
     buildToolsVersion "30.0.0"
 
     defaultConfig {
@@ -110,7 +112,7 @@ dependencies {
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
-
+    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 
 
 }
